2007-08-06  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-05-00
	* standardized parameters
	
2007-04-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-04-00
	* reorganization of code for new plugin manager
	* added parameter to generate LSid (placeholder for correct handling)
	* corrected handling of exceptions from reader
	* added plugin factory without pset argument
	
2007-03-07  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-03-03
	* adjust to reorganization of FWCore

2006-11-11  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-03-02
	* src/DaqFakeReader.cc (fillFEDs): include <cmath> and change
	  log -> std::log and exp -> std::exp for slc4/gcc3.4.5 compliance.

2006-10-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* change interface of DaqBaseReader: pass a pointer reference (not
	a reference) to fillRawData() in order to allow for an allready
	existing collection to be passed. Traditional Readers will have to
	call data=new FEDRawDataCollection() within fillRawData().
	* adjust DaqFakeReader to the interface change above
	* adjust DaqSource to the interface change above
	* [EventFilter/FUReader *is* a DaqBaseReader and is adjusted as
	well!]
	
